--- a/people.htm
+++ b/people.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Bootstrap 101 Template</title>
+		<title>Quotelect - People Page</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -51,12 +51,64 @@
 				</blockquote>
 			</div>
 			<div class="span6">
-				Fluid 5 - Make profile pic and info
+				<div class="well well-large">
+					<div class="media">
+						<a class="pull-right" href="#">
+							<img class="media-object img-polaroid" src="qimg/holder.jpg">
+						</a>
+						<div class="media-body">
+							<h5 class="media-heading">Death Valley, CA, USA</h5>
+							<ul class="unstyled">
+								<li>B: 07/10/1950</li>
+								<li>D: 05/26/2010</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="row-fluid">
 			<div class="span12">
-				Fluid 12 - Make tabbed quotes, followers, activity, etc.
+				<div class="tabbable">
+					<ul class="nav nav-tabs">
+						<li class="active"><a href="#QuoteTab" data-toggle="tab">Quotes</a></li>
+						<li><a href="#FavoritesTab" data-toggle="tab">Favorites</a></li>
+						<li><a href="#FollowersTab" data-toggle="tab">Followers</a></li>
+						<li><a href="#ActivityTab" data-toggle="tab">Activity</a></li>
+					</ul>
+					<div class="tab-content">
+						<div class="tab-pane active" id="QuoteTab">
+							<table>
+								<tbody>
+									<tr>
+										<td>
+											<p>"Holy diver, you've been down too long in the midnight sea"</p>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<p>"Ride the tiger, you can see his stripes but you know he's clean, don't you see what I mean? Gotta get away, holy diver, yeah"</p>
+										</td>
+									</tr>
+									<tr>
+										<td>
+											<p>"Between the velvet lies There's a truth that's hard as steel"</p>
+										</td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+						<div class="tab-pane" id="FavoritesTab">
+							<p>Favorites tab</p>
+						</div>
+						<div class="tab-pane" id="FollowersTab">
+							<p>Followers tab</p>
+						</div>
+						<div class="tab-pane" id="ActivityTab">
+							<p>Activity tab</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</body>
