--- a/quote.htm
+++ b/quote.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Quotelect - People Page</title>
+		<title>Quotelect - Quote Page</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -33,8 +33,8 @@
 							<!-- Everything in below div is hidden at 940px or less, collapsed navbar mode takes over -->
 							<div class="nav-collapse collapse">
 								<ul class="nav">
-									<li><a href="#">Quotes</a></li>
-									<li class="active"><a href="#">People</a></li>
+									<li class="active"><a href="#">Quotes</a></li>
+									<li><a href="#">People</a></li>
 									<li><a href="#">Contests</a></li>
 								</ul>
 							</div>
@@ -45,28 +45,32 @@
 		</div>
 		<div class="row-fluid">
 			<div class="span6">
-				<h1>Ronnie James Dio</h1>
 				<blockquote>
 					<div class="well">
-						<p class="lead"><b>"</b>Holy diver, you've been down too long in the midnight sea<b>"</b></p>
+						<p class="lead"><b>"</b>Between the velvet lies There's a truth that's hard as steel<b>"</b></p>
 					</div>
 				</blockquote>
-			</div>
-			<div class="span4 offset1">
-				<div class="well well-large">
-					<div class="media">
-						<a class="pull-right" href="#">
-							<img class="media-object img-polaroid" src="qimg/holder.jpg">
-						</a>
-						<div class="media-body">
-							<h5 class="media-heading">Death Valley, CA, USA</h5>
-							<ul class="unstyled">
-								<li>B: 07/10/1950</li>
-								<li>D: 05/26/2010</li>
-							</ul>
+				<!-- Nested column -->
+				<div class="row-fluid">
+					<!-- Each group of nested columns must add up to 12 columns -->
+					<div class="span11 offset1">
+						<h5>Context</h5>
+						<div class="well">
+							<p>Ronnie James Dio is talking about how hard he rocks, all the time, even at the exclusivest clubs.</p>
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="span4 offset1">
+				<ul class="thumbnails">
+					<li class="span12">
+						<div class="thumbnail">
+							<h4>Ronnie James Dio</h4>
+							<img class="media-object img-polaroid" src="qimg/holder.jpg" alt="">
+							<br>
+						</div>
+					</li>
+				</ul>
 			</div>
 			<div class="span1">
 				<!--Total of 12 columns required. This span completes 12 columns in the grid, but no content is intended for this column-->
@@ -76,41 +80,36 @@
 			<div class="span12">
 				<div class="tabbable">
 					<ul class="nav nav-tabs">
-						<li class="active"><a href="#QuoteTab" data-toggle="tab">Quotes</a></li>
-						<li><a href="#FavoritesTab" data-toggle="tab">Favorites</a></li>
-						<li><a href="#FollowersTab" data-toggle="tab">Followers</a></li>
-						<li><a href="#ActivityTab" data-toggle="tab">Activity</a></li>
+						<li class="active"><a href="#DiscussTab" data-toggle="tab">Discuss</a></li>
+						<li><a href="#RemixTab" data-toggle="tab">Remix</a></li>
+						<li><a href="#SwagTab" data-toggle="tab">Swag</a></li>
 					</ul>
 					<div class="tab-content">
-						<div class="tab-pane active" id="QuoteTab">
-							<table>
-								<tbody>
-									<tr>
-										<td>
-											<p>"Holy diver, you've been down too long in the midnight sea"</p>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											<p>"Ride the tiger, you can see his stripes but you know he's clean, don't you see what I mean? Gotta get away, holy diver, yeah"</p>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											<p>"Between the velvet lies There's a truth that's hard as steel"</p>
-										</td>
-									</tr>
-								</tbody>
-							</table>
+						<div class="tab-pane active" id="DiscussTab">
+							<p>Discuss Tab</p>
 						</div>
-						<div class="tab-pane" id="FavoritesTab">
-							<p>Favorites tab</p>
+						<div class="tab-pane" id="RemixTab">
+							<ul class="media-list">
+								<li class="media">
+									<a class="pull-left" href="#">
+										<img class="media-object" src="qimg/holder_small.jpg">
+									</a>
+									<div class="media-body">
+										<p>"Between the butter lies There's a bread that's hard as toast"</p>
+									</div>
+								</li>
+								<li class="media">
+									<a class="pull-left" href="#">
+										<img class="media-object" src="qimg/holder_small.jpg">
+									</a>
+									<div class="media-body">
+										<p>"Between the velvet lies There's a lot of cheese"</p>
+									</div>
+								</li>
+							</ul>
 						</div>
-						<div class="tab-pane" id="FollowersTab">
-							<p>Followers tab</p>
-						</div>
-						<div class="tab-pane" id="ActivityTab">
-							<p>Activity tab</p>
+						<div class="tab-pane" id="SwagTab">
+							<p>Swag tab</p>
 						</div>
 					</div>
 				</div>
