--- a/people.htm
+++ b/people.htm
@@ -4,8 +4,10 @@
 		<title>Quotelect - People Page</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
+		<link href="css/bootstrap.css" rel="stylesheet" media="screen">
 		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 		<link href="css/bootstrap-responsive.css" rel="stylesheet">
+		<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
 		<!-- Quotelect -->
 		<link href="qcss/quotelect.css" rel="stylesheet" type="text/css">
 	</head>
@@ -33,8 +35,8 @@
 							<!-- Everything in below div is hidden at 940px or less, collapsed navbar mode takes over -->
 							<div class="nav-collapse collapse">
 								<ul class="nav">
-									<li><a href="#">Quotes</a></li>
-									<li class="active"><a href="#">People</a></li>
+									<li><a href="quote.htm">Quotes</a></li>
+									<li class="active"><a href="people.htm">People</a></li>
 									<li><a href="#">Contests</a></li>
 								</ul>
 							</div>
