Created homepage, tweaked pages
Added the homepage (index.htm). Not totally sure what it should look
like, it isn't finished.
Made the holder_small.jpg image 64x64 pixels to fit better in lists.
Added additional formatting to quotelect.css - added class .brand-head
to be used for consistent formatting of the Quotelect brand name (at
least until a logo is established).
Various other minor changes.

--- a/newquote.htm
+++ b/newquote.htm
@@ -28,7 +28,7 @@
 								<span class="icon-bar"></span>
 							</a>
 							<!-- Brand and Search placed here so they are shown in both collapsed and non-collapsed states -->
-							<a class="brand" href="#">Quotelect</a>
+							<a class="brand" href="index.htm"><div class="brand-head">Quotelect</div></a>
 							<form class="navbar-search pull-right">
 								<input type="text" class="search-query" placeholder="Search">
 							</form>
