--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Quotelect - Quote Page</title>
+		<title>Quotelect - You Are Home</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.css" rel="stylesheet" media="screen">
@@ -35,7 +35,7 @@
 							<!-- Everything in below div is hidden at 940px or less, collapsed navbar mode takes over -->
 							<div class="nav-collapse collapse">
 								<ul class="nav">
-									<li class="active"><a href="quote.htm">Quotes</a></li>
+									<li><a href="quote.htm">Quotes</a></li>
 									<li><a href="people.htm">People</a></li>
 									<li><a href="#">Contests</a></li>
 								</ul>
@@ -47,32 +47,55 @@
 		</div>
 		<div class="row-fluid">
 			<div class="span6">
+				<!-- This span represents the most important part of the home page - the quote of the day -->
+				<h1>Quote of the Day</h1>
 				<blockquote>
 					<div class="well">
-						<p class="lead"><b>"</b>Between the velvet lies There's a truth that's hard as steel<b>"</b></p>
+						<ul class="media-list">
+							<li class="media">
+								<a class="pull-left" href="#">
+									<img class="media-object" src="qimg/holder_small.jpg">
+								</a>
+								<a href="#">
+									<div class="media-body">
+										<p class="lead"><b>"</b>Reflect on yourself not with a mirror, but with what you see inside<b>"</b></p>
+									</div>
+									<b><em class="pull-right">- Trevor Stokes</em></b>
+								</a>
+							</li>
+						</ul>
 					</div>
 				</blockquote>
-				<!-- Nested column -->
-				<div class="row-fluid">
-					<!-- Each group of nested columns must add up to 12 columns -->
-					<div class="span11 offset1">
-						<h5>Context</h5>
-						<div class="well">
-							<p>Ronnie James Dio is talking about how hard he rocks, all the time, even at the exclusivest clubs.</p>
-						</div>
-					</div>
-				</div>
 			</div>
-			<div class="span4 offset1">
-				<ul class="thumbnails">
-					<li class="span12">
-						<div class="thumbnail">
-							<h4>Ronnie James Dio</h4>
-							<img class="media-object img-polaroid" src="qimg/holder.jpg" alt="">
-							<br>
-						</div>
-					</li>
-				</ul>
+			<div class="span5">
+				<!-- One break to level the remix well with the quote of the day well -->
+				<br>
+				<!-- Below well is used for showing remixes of the quote of the day -->
+				<h4>Remixes</h4>
+				<div class="well">				
+					<ul class="media-list">
+						<li class="media">
+							<a class="pull-left" href="#">
+								<img class="media-object" src="qimg/holder_small.jpg">
+							</a>
+							<div class="media-body">
+								<p>"It is not the mirror that bends, but you"</p>
+							</div>
+						</li>
+						<li class="media">
+							<a class="pull-left" href="#">
+								<img class="media-object" src="qimg/holder_small.jpg">
+							</a>
+							<div class="media-body">
+								<p>"Weigh yourself not with a scale, but with your guilt"</p>
+							</div>
+						</li>
+					</ul>
+					<ul class="pager pager-in-well">
+						<li><a href="#">Previous</a></li>
+						<li><a href="#">Next</a></li>
+					</ul>
+				</div>
 			</div>
 			<div class="span1">
 				<!--Total of 12 columns required. This span completes 12 columns in the grid, but no content is intended for this column-->
@@ -80,40 +103,8 @@
 		</div>
 		<div class="row-fluid">
 			<div class="span12">
-				<div class="tabbable">
-					<ul class="nav nav-tabs">
-						<li class="active"><a href="#DiscussTab" data-toggle="tab">Discuss</a></li>
-						<li><a href="#RemixTab" data-toggle="tab">Remix</a></li>
-						<li><a href="#SwagTab" data-toggle="tab">Swag</a></li>
-					</ul>
-					<div class="tab-content">
-						<div class="tab-pane active" id="DiscussTab">
-							<p>Discuss Tab</p>
-						</div>
-						<div class="tab-pane" id="RemixTab">
-							<ul class="media-list">
-								<li class="media">
-									<a class="pull-left" href="#">
-										<img class="media-object" src="qimg/holder_small.jpg">
-									</a>
-									<div class="media-body">
-										<p>"Between the butter lies There's a bread that's hard as toast"</p>
-									</div>
-								</li>
-								<li class="media">
-									<a class="pull-left" href="#">
-										<img class="media-object" src="qimg/holder_small.jpg">
-									</a>
-									<div class="media-body">
-										<p>"Between the velvet lies There's a lot of cheese"</p>
-									</div>
-								</li>
-							</ul>
-						</div>
-						<div class="tab-pane" id="SwagTab">
-							<p>Swag tab</p>
-						</div>
-					</div>
+				<div class="hero-unit">
+					<h2>How To Get Started</h2>
 				</div>
 			</div>
 		</div>
