--- a/people.htm
+++ b/people.htm
@@ -28,7 +28,7 @@
 								<span class="icon-bar"></span>
 							</a>
 							<!-- Brand and Search placed here so they are shown in both collapsed and non-collapsed states -->
-							<a class="brand" href="#">Quotelect</a>
+							<a class="brand" href="index.htm"><div class="brand-head">Quotelect</div></a>
 							<form class="navbar-search pull-right">
 								<input type="text" class="search-query" placeholder="Search">
 							</form>
