Adding in a datepicker and a timepicker; adding containers around stuff
The datepicker and timepicker are both a little weird; they need more
work for sure. The timepicker especially. But it's something.

--- a/index.htm
+++ b/index.htm
@@ -5,9 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="css/bootstrap.css" rel="stylesheet" media="screen">
-		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+<!--		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen"> -->
 		<link href="css/bootstrap-responsive.css" rel="stylesheet">
-		<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+<!--		<link href="css/bootstrap-responsive.min.css" rel="stylesheet"> -->
 		<!-- Quotelect -->
 		<link href="qcss/quotelect.css" rel="stylesheet" type="text/css">
 	</head>
@@ -45,60 +45,60 @@
 				</div>
 			</div>
 		</div>
-		<div class="row-fluid">
-			<div class="span6">
-				<!-- This span represents the most important part of the home page - the quote of the day -->
-				<h1>Quote of the Day</h1>
-				<blockquote>
-					<div class="well">
+		<div class="container">
+			<div class="row-fluid">
+				<div class="span6">
+					<!-- This span represents the most important part of the home page - the quote of the day -->
+					<h1>Quote of the Day</h1>
+						<div class="well">
+							<ul class="media-list">
+								<li class="media">
+									<a class="pull-left" href="#">
+										<img class="media-object" src="qimg/holder_small.jpg">
+									</a>
+									<a href="#">
+										<div class="media-body">
+											<p class="lead"><b>"</b>Reflect on yourself not with a mirror, but with what you see inside<b>"</b></p>
+										</div>
+										<b><em class="pull-right">- Trevor Stokes</em></b>
+									</a>
+								</li>
+							</ul>
+						</div>
+				</div>
+				<div class="span5">
+					<!-- One break to level the remix well with the quote of the day well -->
+					<br>
+					<!-- Below well is used for showing remixes of the quote of the day -->
+					<h4>Remixes</h4>
+					<div class="well">				
 						<ul class="media-list">
 							<li class="media">
 								<a class="pull-left" href="#">
 									<img class="media-object" src="qimg/holder_small.jpg">
 								</a>
-								<a href="#">
-									<div class="media-body">
-										<p class="lead"><b>"</b>Reflect on yourself not with a mirror, but with what you see inside<b>"</b></p>
-									</div>
-									<b><em class="pull-right">- Trevor Stokes</em></b>
+								<div class="media-body">
+									<p>"It is not the mirror that bends, but you"</p>
+								</div>
+							</li>
+							<li class="media">
+								<a class="pull-left" href="#">
+									<img class="media-object" src="qimg/holder_small.jpg">
 								</a>
+								<div class="media-body">
+									<p>"Weigh yourself not with a scale, but with your guilt"</p>
+								</div>
 							</li>
 						</ul>
+						<ul class="pager pager-in-well">
+							<li><a href="#">Previous</a></li>
+							<li><a href="#">Next</a></li>
+						</ul>
 					</div>
-				</blockquote>
-			</div>
-			<div class="span5">
-				<!-- One break to level the remix well with the quote of the day well -->
-				<br>
-				<!-- Below well is used for showing remixes of the quote of the day -->
-				<h4>Remixes</h4>
-				<div class="well">				
-					<ul class="media-list">
-						<li class="media">
-							<a class="pull-left" href="#">
-								<img class="media-object" src="qimg/holder_small.jpg">
-							</a>
-							<div class="media-body">
-								<p>"It is not the mirror that bends, but you"</p>
-							</div>
-						</li>
-						<li class="media">
-							<a class="pull-left" href="#">
-								<img class="media-object" src="qimg/holder_small.jpg">
-							</a>
-							<div class="media-body">
-								<p>"Weigh yourself not with a scale, but with your guilt"</p>
-							</div>
-						</li>
-					</ul>
-					<ul class="pager pager-in-well">
-						<li><a href="#">Previous</a></li>
-						<li><a href="#">Next</a></li>
-					</ul>
 				</div>
-			</div>
-			<div class="span1">
-				<!--Total of 12 columns required. This span completes 12 columns in the grid, but no content is intended for this column-->
+				<div class="span1">
+					<!--Total of 12 columns required. This span completes 12 columns in the grid, but no content is intended for this column-->
+				</div>
 			</div>
 		</div>
 		<div class="row-fluid">
