--- a/people.htm
+++ b/people.htm
@@ -45,35 +45,34 @@
 				</div>
 			</div>
 		</div>
-		<div class="row-fluid">
-			<div class="span6">
-				<h1>Ronnie James Dio</h1>
-				<blockquote>
-					<div class="well">
-						<p class="lead"><b>"</b>Holy diver, you've been down too long in the midnight sea<b>"</b></p>
-					</div>
-				</blockquote>
-			</div>
-			<div class="span4 offset1">
-				<div class="well well-large">
-					<div class="media">
-						<a class="pull-right" href="#">
-							<img class="media-object img-polaroid" src="qimg/holder.jpg">
-						</a>
-						<div class="media-body">
-							<h5 class="media-heading">Death Valley, CA, USA</h5>
-							<ul class="unstyled">
-								<li>B: 07/10/1950</li>
-								<li>D: 05/26/2010</li>
-							</ul>
+		<div class="container">
+			<div class="row-fluid">
+				<div class="span6">
+					<h1>Ronnie James Dio</h1>
+						<div class="well">
+							<p class="lead"><b>"</b>Holy diver, you've been down too long in the midnight sea<b>"</b></p>
+						</div>
+				</div>
+				<div class="span4 offset1">
+					<div class="well well-large">
+						<div class="media">
+							<a class="pull-right" href="#">
+								<img class="media-object img-polaroid" src="qimg/holder.jpg">
+							</a>
+							<div class="media-body">
+								<h5 class="media-heading">Death Valley, CA, USA</h5>
+								<ul class="unstyled">
+									<li>B: 07/10/1950</li>
+									<li>D: 05/26/2010</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
+				<div class="span1">
+					<!--Total of 12 columns required. This span completes 12 columns in the grid, but no content is intended for this column-->
+				</div>
 			</div>
-			<div class="span1">
-				<!--Total of 12 columns required. This span completes 12 columns in the grid, but no content is intended for this column-->
-			</div>
-		</div>
 		<div class="row-fluid">
 			<div class="span12">
 				<div class="tabbable">
@@ -84,6 +83,7 @@
 						<li><a href="#ActivityTab" data-toggle="tab">Activity</a></li>
 					</ul>
 					<div class="tab-content">
+						<div
 						<div class="tab-pane active" id="QuoteTab">
 							<table>
 								<tbody>
@@ -118,6 +118,7 @@
 				</div>
 			</div>
 		</div>
+	</div>
 	</body>
 	
 </html>
