--- a/quote.htm
+++ b/quote.htm
@@ -45,73 +45,73 @@
 				</div>
 			</div>
 		</div>
-		<div class="row-fluid">
-			<div class="span6">
-				<blockquote>
+		<div class="container">
+			<div class="row-fluid">
+				<div class="span6">
 					<div class="well">
 						<p class="lead"><b>"</b>Between the velvet lies There's a truth that's hard as steel<b>"</b></p>
 					</div>
-				</blockquote>
-				<!-- Nested column -->
-				<div class="row-fluid">
-					<!-- Each group of nested columns must add up to 12 columns -->
-					<div class="span11 offset1">
-						<h5>Context</h5>
-						<div class="well">
-							<p>Ronnie James Dio is talking about how hard he rocks, all the time, even at the exclusivest clubs.</p>
+					<!-- Nested column -->
+					<div class="row-fluid">
+						<!-- Each group of nested columns must add up to 12 columns -->
+						<div class="span12">
+							<h5>Context</h5>
+							<div class="well">
+								<p>Ronnie James Dio is talking about how hard he rocks, all the time, even at the exclusivest clubs.</p>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="span4 offset1">
-				<ul class="thumbnails">
-					<li class="span12">
-						<div class="thumbnail">
-							<h4>Ronnie James Dio</h4>
-							<img class="media-object img-polaroid" src="qimg/holder.jpg" alt="">
-							<br>
-						</div>
-					</li>
-				</ul>
-			</div>
-			<div class="span1">
-				<!--Total of 12 columns required. This span completes 12 columns in the grid, but no content is intended for this column-->
-			</div>
-		</div>
-		<div class="row-fluid">
-			<div class="span12">
-				<div class="tabbable">
-					<ul class="nav nav-tabs">
-						<li class="active"><a href="#DiscussTab" data-toggle="tab">Discuss</a></li>
-						<li><a href="#RemixTab" data-toggle="tab">Remix</a></li>
-						<li><a href="#SwagTab" data-toggle="tab">Swag</a></li>
+				<div class="span4 offset1">
+					<ul class="thumbnails">
+						<li class="span12">
+							<div class="thumbnail">
+								<h4>Ronnie James Dio</h4>
+								<img class="media-object img-polaroid" src="qimg/holder.jpg" alt="">
+								<br>
+							</div>
+						</li>
 					</ul>
-					<div class="tab-content">
-						<div class="tab-pane active" id="DiscussTab">
-							<p>Discuss Tab</p>
-						</div>
-						<div class="tab-pane" id="RemixTab">
-							<ul class="media-list">
-								<li class="media">
-									<a class="pull-left" href="#">
-										<img class="media-object" src="qimg/holder_small.jpg">
-									</a>
-									<div class="media-body">
-										<p>"Between the butter lies There's a bread that's hard as toast"</p>
-									</div>
-								</li>
-								<li class="media">
-									<a class="pull-left" href="#">
-										<img class="media-object" src="qimg/holder_small.jpg">
-									</a>
-									<div class="media-body">
-										<p>"Between the velvet lies There's a lot of cheese"</p>
-									</div>
-								</li>
-							</ul>
-						</div>
-						<div class="tab-pane" id="SwagTab">
-							<p>Swag tab</p>
+				</div>
+				<div class="span1">
+					<!--Total of 12 columns required. This span completes 12 columns in the grid, but no content is intended for this column-->
+				</div>
+			</div>
+			<div class="row-fluid">
+				<div class="span12">
+					<div class="tabbable">
+						<ul class="nav nav-tabs">
+							<li class="active"><a href="#DiscussTab" data-toggle="tab">Discuss</a></li>
+							<li><a href="#RemixTab" data-toggle="tab">Remix</a></li>
+							<li><a href="#SwagTab" data-toggle="tab">Swag</a></li>
+						</ul>
+						<div class="tab-content">
+							<div class="tab-pane active" id="DiscussTab">
+								<p>Discuss Tab</p>
+							</div>
+							<div class="tab-pane" id="RemixTab">
+								<ul class="media-list">
+									<li class="media">
+										<a class="pull-left" href="#">
+											<img class="media-object" src="qimg/holder_small.jpg">
+										</a>
+										<div class="media-body">
+											<p>"Between the butter lies There's a bread that's hard as toast"</p>
+										</div>
+									</li>
+									<li class="media">
+										<a class="pull-left" href="#">
+											<img class="media-object" src="qimg/holder_small.jpg">
+										</a>
+										<div class="media-body">
+											<p>"Between the velvet lies There's a lot of cheese"</p>
+										</div>
+									</li>
+								</ul>
+							</div>
+							<div class="tab-pane" id="SwagTab">
+								<p>Swag tab</p>
+							</div>
 						</div>
 					</div>
 				</div>
